[tool.poetry]
name = "pebble"
version = "0.1.0"
description = "A small, interpretable LLM system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.0"
numpy = "^1.20.0"
tqdm = "^4.60.0"
matplotlib = "^3.4.0"
tokenizers = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
